--- a/index.html
+++ b/index.html
@@ -1468,7 +1468,7 @@ document.addEventListener("DOMContentLoaded", () => {
       text: 'Please proceed to register',
       icon: 'warning',
       showCancelButton: true,
-      confirmButtonText: 'OK',
+      confirmButtonText: 'YES, REGISTER',
       cancelButtonText: 'NO',
       background: 'linear-gradient(135deg, #e1f5fe 0%, #b3e5fc 45%, #81d4fa 100%)',
       color: '#176B39',
