--- a/index.html
+++ b/index.html
@@ -1423,7 +1423,7 @@ document.addEventListener("DOMContentLoaded", () => {
         text: 'Please retake id photo',
         icon: 'warning',
         showCancelButton: true,
-        confirmButtonText: 'YES, RETAKE ID',
+        confirmButtonText: 'OK',
         cancelButtonText: 'NO',
         background: 'linear-gradient(135deg, #fff9e6 0%, #ffecb3 45%, #ffd54f 100%)',
         color: '#176B39',
@@ -1458,7 +1458,7 @@ document.addEventListener("DOMContentLoaded", () => {
         text: 'Autofill this form with record details?',
         icon: 'success',
         showCancelButton: true,
-        confirmButtonText: 'YES, AUTOFILL',
+        confirmButtonText: 'YES',
         cancelButtonText: 'NO',
         background: 'linear-gradient(135deg, #e9f7ef 0%, #c8efd9 45%, #9fdfbf 100%)',
         color: '#176B39',
