--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ body {
   }
   
   .swal2-popup {
-    width: auto !important;
+    width: 300px !important;
     max-width: 300px !important;
     padding: 14px 16px !important;
     border-radius: 14px !important;
@@ -383,15 +383,15 @@ body {
   align-items:center;
   gap:8px;
   margin:5px 0;
-  font-size:12px;
-  font-weight:800;
+  font-size:10px;
+  font-weight:700;
   letter-spacing:.6px;
   text-transform:uppercase;
 }
 
 .ocr-item .dot{
-  width:9px;
-  height:9px;
+  width:12px;
+  height:12px;
   border-radius:50%;
   display:inline-block;
 }
