--- a/index.html
+++ b/index.html
@@ -1540,7 +1540,7 @@ document.addEventListener("DOMContentLoaded", () => {
     console.error(err);
     safeSwalFire({
       title: 'ERROR',
-      text: err?.message || 'Search failed!',
+      text: err?.message || 'Please try again',
       icon: 'error',
       confirmButtonText: 'OK'
     });
