--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ body {
     color: #2b7a2b;
     text-align: center;
     margin-top: 0.10px;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
   }
   .clock-bar {
     display: flex;
@@ -30,8 +30,6 @@ body {
     font-family: Arial, sans-serif;
     font-weight: bold;
     opacity: 0.90;
-    position: relative;
-    z-index: 10;
   }
   .clock-date, .clock-time {
     font-size: 11px;
@@ -39,12 +37,10 @@ body {
   .header-gradient {
     background: linear-gradient(145deg, #54e087 0%, #2b7a2b 100%);
     font-weight: 900;
-    font-size: 1.8rem;
+    font-size: 26px;
     letter-spacing: 1.3px;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    background-clip: text;
-    color: transparent;
   }
   
   .swal2-popup {
