--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@ body {
     align-items: center;
     width: 100%;
     max-width: 180px;
-    margin-top: 0.5px;
-    margin-bottom: 13px;
+    margin-top: 0px auto;
+    margin-bottom: 13px auto;
     padding: 2.5px 12px;
     border-radius: 11px;
     background: linear-gradient(90deg, #41e671 0%, #176B39 100%);
