--- a/index.html
+++ b/index.html
@@ -10,17 +10,16 @@ body {
   h2 {
     color: #2b7a2b;
     text-align: center;
-    margin-top: 0.10px;
-    margin-bottom: 20px;
+    margin-top: 0.5px;
+    margin-bottom: 15px;
   }
   .clock-bar {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    max-width: 180px;
-    margin-top: 0px auto;
-    margin-bottom: 13px auto;
+    max-width: 180%;
+    margin: 0 auto 13px auto;
     padding: 2.5px 12px;
     border-radius: 11px;
     background: linear-gradient(90deg, #41e671 0%, #176B39 100%);
