--- a/index.html
+++ b/index.html
@@ -13,24 +13,25 @@ body {
     margin-top: 0.5px;
     margin-bottom: 15px;
   }
-  .clock-bar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    max-width: 180%;
-    margin: 0 auto 13px auto;
-    padding: 2.5px 12px;
-    border-radius: 11px;
-    background: linear-gradient(90deg, #41e671 0%, #176B39 100%);
-    box-shadow: 0 1px 4px 0 #bbdfbb70;
-    font-size: 11px;
-    color: #fff;
-    letter-spacing: 1.4px;
-    font-family: Arial, sans-serif;
-    font-weight: bold;
-    opacity: 0.90;
-  }
+  /* ===== CLOCK BAR (EXACT FORM MATCH) ===== */
+.clock-bar{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  width:100%;
+  max-width:180px;
+  margin:0 auto 13px auto;
+  padding:2.5px 12px;
+  border-radius:11px;
+  background:linear-gradient(90deg,#41e671 0%, #176B39 100%);
+  box-shadow:0 1px 4px 0 #bbdfbb70;
+  font-size:11px;
+  color:#fff;
+  letter-spacing:1.4px;
+  font-family: Arial, sans-serif;
+  font-weight:bold;
+  opacity:0.90;
+}
   .clock-date, .clock-time {
     font-size: 11px;
   }
