--- a/index.html
+++ b/index.html
@@ -1,19 +1,16 @@
 <html>
   <head><title>SECURE ENTRY SYSTEM</title><meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin><link rel="dns-prefetch" href="//cdn.jsdelivr.net"><link rel="preconnect" href="https://ext-mredtech.edreborn86.workers.dev" crossorigin><link rel="dns-prefetch" href="//ext-mredtech.edreborn86.workers.dev"><link rel="preconnect" href="https://sensory-vision.edreborn86.workers.dev" crossorigin><link rel="dns-prefetch" href="//sensory-vision.edreborn86.workers.dev">
     <style>
-body {
-    font-family: Arial, sans-serif;
-    background-color: #e9f5e9;
-    padding: 20px;
-    text-transform: uppercase;
-  }
-  h2 {
-    color: #2b7a2b;
-    text-align: center;
-    margin-top: 0.5px;
-    margin-bottom: 15px;
-  }
-  /* ===== CLOCK BAR (EXACT FORM MATCH) ===== */
+    /* ===== BASE ===== */
+body{
+  margin:0;
+  padding:20px;
+  font-family: Arial, sans-serif;
+  background:#e9f5e9;
+  text-transform: uppercase;
+}
+
+/* ===== CLOCK BAR (EXACT FORM MATCH) ===== */
 .clock-bar{
   display:flex;
   justify-content:space-between;
@@ -32,18 +29,38 @@ body {
   font-weight:bold;
   opacity:0.90;
 }
-  .clock-date, .clock-time {
-    font-size: 11px;
-  }
-  .header-gradient {
-    background: linear-gradient(145deg, #54e087 0%, #2b7a2b 100%);
-    font-weight: 900;
-    font-size: 26px;
-    letter-spacing: 1.3px;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-  }
-  
+
+/* ===== HEADER ===== */
+.header{
+  text-align:center;
+  margin-bottom:22px;
+}
+
+.header h1{
+  margin:6px 0 4px 0;
+  font-size:26px;
+  font-weight:900;
+  letter-spacing:1.3px;
+  background:linear-gradient(145deg,#54e087 0%, #2b7a2b 100%);
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
+}
+
+.header .sub{
+  font-size:12px;
+  color:#489167;
+  letter-spacing:.8px;
+  margin-bottom:6px;
+}
+
+/* ===== LINE GRADIENT (SAME AS FORM) ===== */
+.header-line{
+  height:3px;
+  width:60px;
+  margin:0 auto 6px auto;
+  background:linear-gradient(90deg,#3bd97b 20%, #2b7a2b 80%);
+  border-radius:2px;
+}
   .swal2-popup {
     width: 300px !important;
     max-width: 300px !important;
