--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@ body{
   background:linear-gradient(145deg,#54e087 0%, #2b7a2b 100%);
   -webkit-background-clip:text;
   -webkit-text-fill-color:transparent;
+  margin-top:6px;
+  margin-bottom:6px;
 }
 
 .header .sub{
