--- a/index.html
+++ b/index.html
@@ -35,17 +35,16 @@ body{
   text-align:center;
   margin-bottom:22px;
 }
-
-.header h1{
-  margin:6px 0 4px 0;
-  font-size:26px;
-  font-weight:900;
-  letter-spacing:1.3px;
-  background:linear-gradient(145deg,#54e087 0%, #2b7a2b 100%);
-  -webkit-background-clip:text;
-  -webkit-text-fill-color:transparent;
-  margin-top:6px;
-  margin-bottom:6px;
+      
+.header-gradient {
+    background: linear-gradient(145deg, #54e087 0%, #2b7a2b 100%);
+    font-weight: 800;
+    font-size: 26px;
+    letter-spacing: 1.3px;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    color: transparent;
 }
 
 .header .sub{
