--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ body{
     font-weight: 800;
     font-size: 26px;
     letter-spacing: 1.3px;
+    margin:0 auto 5px auto;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
