--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-  <head><title>SECURE ENTRY SYSTEM</title><meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin><link rel="dns-prefetch" href="//cdn.jsdelivr.net"><link rel="preconnect" href="https://ext-mredtech.edreborn86.workers.dev" crossorigin><link rel="dns-prefetch" href="//ext-mredtech.edreborn86.workers.dev"><link rel="preconnect" href="https://sensory-vision.edreborn86.workers.dev" crossorigin><link rel="dns-prefetch" href="//sensory-vision.edreborn86.workers.dev">
+  <head><title>SECURE ENTRY SYSTEM</title><meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin><link rel="dns-prefetch" href="//cdn.jsdelivr.net"><link rel="preconnect" href="https://ext-cerrado.edreborn86.workers.dev" crossorigin><link rel="dns-prefetch" href="//ext-cerrado.edreborn86.workers.dev"><link rel="preconnect" href="https://sensory-vision.edreborn86.workers.dev" crossorigin><link rel="dns-prefetch" href="//sensory-vision.edreborn86.workers.dev">
     <style>
 
 .fixed-header{
@@ -581,7 +581,7 @@ h2 {
     </div>
     <div class="image-container" id="imageContainer">
       <img id="preview" src="#" alt="IMAGE PREVIEW">
-      <div class="watermark">SENSORY USE ONLY
+      <div class="watermark">CERRADO USE ONLY
       </div>
     </div>
     <form id="registrationForm" autocomplete="off"><label for="namePassport">NAME</label><input type="text" id="namePassport" name="namePassport" required><label for="mykadPassport">MYKAD / PASSPORT</label><input type="text" id="mykadPassport" name="mykadPassport" required><label for="regnum">REGISTRATION NUMBER</label><input type="text" id="regnum" name="regnum" required><label for="contact">CONTACT NUMBER</label>
@@ -1399,7 +1399,7 @@ reasonSelect.addEventListener('change', function() {
       return cleaned;
     }
 
-    const WORKER_URL = "https://ext-mredtech.edreborn86.workers.dev";
+    const WORKER_URL = "https://ext-cerrado.edreborn86.workers.dev";
 
 document.addEventListener("DOMContentLoaded", () => {
   if (!sessionStorage.getItem("SE_WARMED")) {
@@ -1678,7 +1678,7 @@ document.addEventListener("DOMContentLoaded", () => {
       }
     });
 
-  const urlCloudflareWorker = "https://ext-mredtech.edreborn86.workers.dev";
+  const urlCloudflareWorker = "https://ext-cerrado.edreborn86.workers.dev";
 
   let __SE_isSubmitting = false;
 
