--- a/index.html
+++ b/index.html
@@ -2192,7 +2192,7 @@ function filterNonNameWords(text) {
       const u = String(s || "").toUpperCase().trim();
       if (!u) return false;
       if (/\d/.test(u)) return false; 
-      if (/\b(ALAMAT|ADDRESS|NO\.?|LOT|KG\.?|KAMPUNG|JALAN|LORONG|TAMAN|BANDAR|SEKSYEN|PERSIARAN|POSKOD|POSTCODE|\d{5})\b/.test(u)) return false;
+      if (/\b(ALAMAT|ADDRESS|NO\.?|LOT|KG\.?|KAMPUNG|JALAN|PANGSAPURI|PEKAN|LORONG|TAMAN|BANDAR|SEKSYEN|PERSIARAN|POSKOD|POSTCODE|\d{5})\b/.test(u)) return false;
       return u.length >= 2;
     };
 
@@ -2254,7 +2254,7 @@ function filterNonNameWords(text) {
   let t = normalizeForFilter(text);
 
   const ADDRESS_CUTOFF_REGEX =
-    /\b(ALAMAT|ADDRESS|NO\.?|JALAN|LORONG|TAMAN|KAMPUNG|BANDAR|SEKSYEN|PERSIARAN|APARTMENT|APARTMEN|FLAT|RESIDENSI|HEIGHTS?|HEIGHT)\b/;
+    /\b(ALAMAT|ADDRESS|NO\.?|JALAN|PANGSAPURI|PEKAN|LORONG|TAMAN|KAMPUNG|BANDAR|SEKSYEN|PERSIARAN|APARTMENT|APARTMEN|FLAT|RESIDENSI|HEIGHTS?|HEIGHT)\b/;
 
   const addrIdx = t.search(ADDRESS_CUTOFF_REGEX);
   if (addrIdx !== -1) {
@@ -2281,7 +2281,7 @@ function filterNonNameWords(text) {
   if (/\d/.test(finalName)) return "";
 
   const LOCATION_ANYWHERE =
-    /\b(KG\.?|KAMPUNG|TAMAN|BANDAR|JALAN|LORONG|PERSIARAN|SEKSYEN|LOT|POSKOD|POSTCODE|DAERAH|MUKIM|NEGERI|WILAYAH|HEIGHTS?|HEIGHT|APARTMENT|APARTMEN|FLAT|RESIDENSI)\b/;
+    /\b(KG\.?|KAMPUNG|TAMAN|BANDAR|JALAN|PANGSAPURI|PEKAN|LORONG|PERSIARAN|SEKSYEN|LOT|POSKOD|POSTCODE|DAERAH|MUKIM|NEGERI|WILAYAH|HEIGHTS?|HEIGHT|APARTMENT|APARTMEN|FLAT|RESIDENSI)\b/;
   if (LOCATION_ANYWHERE.test(finalName)) return "";
 
   const HAS_CONNECTOR = /\b(BIN|BINTI|A\/L|A\/P)\b/.test(finalName);
@@ -2294,7 +2294,7 @@ function filterNonNameWords(text) {
 
   if (!/[AEIOU]/.test(finalName)) return "";
 
-  if (/^(KG\.?|KAMPUNG|TAMAN|BANDAR|JALAN|LORONG|PERSIARAN|SEKSYEN|LOT|NO)\b/.test(finalName)) return "";
+  if (/^(KG\.?|KAMPUNG|TAMAN|BANDAR|JALAN|PANGSAPURI|PEKAN|LORONG|PERSIARAN|SEKSYEN|LOT|NO)\b/.test(finalName)) return "";
 
   return finalName;
 }
