--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
     <link rel="dns-prefetch" href="//cdn.jsdelivr.net">
-    <link rel="preconnect" href="https://ext-mredtech.edreborn86.workers.dev" crossorigin>
-    <link rel="dns-prefetch" href="//ext-mredtech.edreborn86.workers.dev">
+    <link rel="preconnect" href="https://ext-cerrado.edreborn86.workers.dev" crossorigin>
+    <link rel="dns-prefetch" href="//ext-cerrado.edreborn86.workers.dev">
     <link rel="preconnect" href="https://sensory-vision.edreborn86.workers.dev" crossorigin>
     <link rel="dns-prefetch" href="//sensory-vision.edreborn86.workers.dev">
 
@@ -1152,7 +1152,7 @@
 </div>
 <div class="image-container" id="imageContainer">
   <img id="preview" src="#" alt="IMAGE PREVIEW">
-  <div class="watermark">SENSORY USE ONLY
+  <div class="watermark">CERRADO USE ONLY
 </div>
 </div>
 <form id="registrationForm" autocomplete="off">
@@ -1185,6 +1185,7 @@
     <option value="MCD FOOD DELIVERY">MCD FOOD DELIVERY</option>
     <option value="NINJA VAN">NINJA VAN</option>
     <option value="OWNER">OWNER</option>
+    <option value="PEDESTRIAN B1">PEDESTRIAN B1</option>
     <option value="POS LAJU">POS LAJU</option>
     <option value="SHOPEE EXPRESS">SHOPEE EXPRESS</option>
     <option value="SHOPEE FOOD">SHOPEE FOOD</option>
@@ -1286,7 +1287,7 @@
 /* =========================
    CONFIG / CONSTANTS
 ========================= */
-const WORKER_URL = "https://ext-mredtech.edreborn86.workers.dev";
+const WORKER_URL = "https://ext-cerrado.edreborn86.workers.dev";
 const VISION_PROXY_URL = "https://sensory-vision.edreborn86.workers.dev";
 
 // Preview display ratio used by adjustPreviewSize() (maxHeight = width * ratio)
@@ -1394,13 +1395,11 @@ function setPreviewAndCache(dataUrl){
 }
 
 function hideOverlayWatermark(){
-  // Jika watermark sudah dibakar (burn-in) ke dalam imej,
-  // kita sembunyikan overlay supaya tak jadi dua kali.
   if (watermarkOverlay) watermarkOverlay.style.display = 'none';
 }
 
 function drawWatermarkOnCanvas(ctx, w, h){
-  const text = "SENSORY USE ONLY";
+  const text = "CERRADO USE ONLY";
   ctx.save();
   ctx.translate(w * 0.5, h * 0.5);
   ctx.rotate(-40 * Math.PI / 180);
@@ -2057,7 +2056,7 @@ reasonOther.required = false;
 
 remarkSelect.addEventListener('change', function() {
   const val = this.value.toUpperCase();
-  const isResident = (val === 'OWNER' || val === 'TENANT');
+  const isResident = (val === 'OWNER' || val === 'TENANT' || val === 'PEDESTRIAN B1');
 
   unitField.style.display     = isResident ? 'block' : 'none';
   reasonSection.style.display = isResident ? 'block' : 'none';
