--- a/index.html
+++ b/index.html
@@ -465,7 +465,6 @@
 
       }
 
-      /* Select placeholder (kelabu pudar) + selected (hitam) */
       select {
         color: #111111;
       }
@@ -1155,10 +1154,9 @@ textarea:focus{
 
       }
 
-    
 
 /* ==================================================
-   PREMIUM UI PATCH (A+B)
+   PREMIUM UI PATCH
    - Fixed header premium (Sensory style)
    - Soft green glow cards/inputs
    - Consistent 3D/gradient buttons
@@ -1169,7 +1167,7 @@ textarea:focus{
   --se-green-2:#176B39;
   --se-green-3:#3bd97b;
   --se-text:#176B39;
-  --se-placeholder: #a7b2ad; /* kelabu pudar */
+  --se-placeholder: #a7b2ad;
   --se-card:#ffffff;
   --se-glow:rgba(59,217,123,.18);
   --se-glow-strong:rgba(59,217,123,.28);
@@ -1464,8 +1462,8 @@ const VISION_PROXY_URL = "https://sensory-vision.edreborn86.workers.dev";
 const PREVIEW_MAX_RATIO = 0.78;
 
 // Output sizing (speed + upload size)
-const CAPTURE_MAX_W = 1100;          // max width for captured/cropped ID photo
-const CAPTURE_JPEG_Q = 0.75;         // keep same quality as current
+const CAPTURE_MAX_W = 1100;          
+const CAPTURE_JPEG_Q = 0.75;     
 
 const FIELD = {
   REG: "REGNUM",
@@ -1487,17 +1485,16 @@ const OCR_LIVE = {
   }
 };
 
-
 /* =========================
    OCR CAPTURE MODES (Doc Types)
    - CARD: MyKad / Malaysia licence / International licence / ID card
    - PASSPORT: Passport
-   - BOOKLET: Folded/large IDs (best-effort)
+   - BOOKLET: Folded/large IDs
 ========================= */
 const DOC_MODE = {
   current: 'CARD',
   presets: {
-    CARD:     { ar: 1.585, maxW: 1100, q: 0.76 },  // credit-card ratio
+    CARD:     { ar: 1.585, maxW: 1100, q: 0.76 },  // card ratio
     PASSPORT: { ar: 1.420, maxW: 1400, q: 0.78 },  // passport ID-3 approx
     BOOKLET:  { ar: 1.333, maxW: 1400, q: 0.78 }   // wide safety
   }
@@ -2678,7 +2675,7 @@ function filterNonNameWords(text) {
   let t = normalizeForFilter(text);
 
   const ADDRESS_CUTOFF_REGEX =
-    /\b(ALAMAT|ADDRESS|NO\.?|JALAN|PANGSAPURI|PEKAN|LORONG|TAMAN|TMN|KAMPUNG|BANDAR|SEKSYEN|PERSIARAN|APARTMENT|APARTMEN|FLAT|RESIDENSI|HEIGHTS?|HEIGHT)\b/;
+    /\b(ALAMAT|ADDRESS|NO\.?|JALAN|PANGSAPURI|PEKAN|LORONG|TAMAN|TMN|KAMPUNG|KG|BANDAR|SEKSYEN|PERSIARAN|APARTMENT|APARTMEN|FLAT|RESIDENSI|HEIGHTS?|HEIGHT)\b/;
 
   const addrIdx = t.search(ADDRESS_CUTOFF_REGEX);
   if (addrIdx !== -1) {
@@ -2745,7 +2742,6 @@ function detectSearchField(raw) {
 
   if (digitsOnly.length === 12 && !/[A-Z]/.test(alnumOnly)) return FIELD.ID;
   if (/^\d{6}-\d{2}-\d{4}$/.test(s)) return FIELD.ID;
-
   if (/^[A-Z]{1,3}\d{6,}[A-Z]{3}$/.test(alnumOnly)) return FIELD.ID;
   if (/^[A-Z]{1,3}\d{6,}$/.test(alnumOnly)) return FIELD.ID;
 
