--- a/index.html
+++ b/index.html
@@ -1490,7 +1490,7 @@ select:focus,
 /* =========================
    CONFIG / CONSTANTS
 ========================= */
-const WORKER_URL = "https://ext-mredtech01.edreborn86.workers.dev/";
+const WORKER_URL = "https://ext-mredtech01.edreborn86.workers.dev";
 const VISION_PROXY_URL = "https://sensory-vision.edreborn86.workers.dev";
 
 // Preview display ratio used by adjustPreviewSize() (maxHeight = width * ratio)
