--- a/index.html
+++ b/index.html
@@ -2621,7 +2621,7 @@ document.getElementById('unitNumber').addEventListener('input', function() {
    NAME CLEANER
 ========================= */
 const NON_NAME_WORDS = [
-  "MALAYSIA", "MALAYSIA P", "KAD PENGENALAN", "IDENTITY CARD", "MYKAD", "ID", "PASSPORT",
+  "MALAYSIA", "MALAYSIA P", "KAD PENGENALAN", "IDENTITY CARD", "MYKAD", "ID", "I.D", "PASSPORT",
   "WARGANEGARA", "LELAKI", "PEREMPUAN", "ISLAM", "CHRISTIAN", "BUDDHA", "HINDU",
   "AGAMA", "MALE", "FEMALE", "JANTINA", "NATIONALITY", "CITIZENSHIP", "LICENCE",
   "LESEN MEMANDU", "DRIVING LICENCE", "VOCATIONAL LICENCE", "DIGITAL", "GOVERNMENT", "CLASS",
@@ -2631,6 +2631,10 @@ const NON_NAME_WORDS = [
   "JOHOR", "KEDAH", "KELANTAN", "MELAKA", "MELAKA TENGAH", "NEGERI SEMBILAN", "PAHANG", "PERAK",
   "PERLIS", "PULAU PINANG", "PENANG", "SABAH", "SARAWAK", "SELANGOR", "TERENGGANU", "WILAYAH PERSEKUTUAN",
   "KUALA LUMPUR", "PUTRAJAYA", "LABUAN"
+
+  "JENDERAM HILIR", "SOUTHVILLE CITY", "TMN SALAK JAYA", "WANGSA MAJU", "VISTA SERI PUTRA", "ALAM SARI", "PT BUNTAR", "SLIP PEMBAHARUAN", 
+  "PEKAN KAJANG", "BRIVING", "SAUJANA UTAMA 3", "TANJUNG KERAMAT", "LENGKAP FULL NAME", "NAMA/NAME:", "RALS CLE", "ECO MAJESTIC", "IDENTITY CARD",
+  "SETIA ECOHILL", "PARIT JAWA", "LESEN KENDERAAN MOTOR"
 ];
 
 function filterNonNameWords(text) {
