--- a/index.html
+++ b/index.html
@@ -2630,7 +2630,7 @@ const NON_NAME_WORDS = [
 
   "JOHOR", "KEDAH", "KELANTAN", "MELAKA", "MELAKA TENGAH", "NEGERI SEMBILAN", "PAHANG", "PERAK",
   "PERLIS", "PULAU PINANG", "PENANG", "SABAH", "SARAWAK", "SELANGOR", "TERENGGANU", "WILAYAH PERSEKUTUAN",
-  "KUALA LUMPUR", "PUTRAJAYA", "LABUAN"
+  "KUALA LUMPUR", "PUTRAJAYA", "LABUAN",
 
   "JENDERAM HILIR", "SOUTHVILLE CITY", "TMN SALAK JAYA", "WANGSA MAJU", "VISTA SERI PUTRA", "ALAM SARI", "PT BUNTAR", "SLIP PEMBAHARUAN", 
   "PEKAN KAJANG", "BRIVING", "SAUJANA UTAMA 3", "TANJUNG KERAMAT", "LENGKAP FULL NAME", "NAMA/NAME:", "RALS CLE", "ECO MAJESTIC", "IDENTITY CARD",
